fix logo alignment

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
-    margin-left: 535px;
+    margin-left: 521px;
     text-transform: uppercase;
 }
 
